<resources>
    <string name="app_name">CartelerApp</string>

    <!-- login -->
    <string name="title">Bienvenido de nuevo</string>
    <string name="email">Correo electronico</string>
    <string name="pass">Contraseña</string>
    <string name="login">Iniciar sesión</string>

    <!-- bottom navigation -->
    <string name="profile">Perfil</string>
    <string name="billboard">Cartelera</string>
    <string name="location">Complejo</string>
    <string name="details">Detalles</string>

    <!-- Error de formato -->
    <string name="required_field">Campo requerido</string>
    <string name="incorrect_format">Formato incorrecto</string>
    <string name="back"><![CDATA[<]]></string>

    <!-- Sign Up -->
    <string name="sign_up">Registrar</string>
    <string name="registration">Registro</string>
    <string name="check_long">Caracteres 5 a 10</string>
    <string name="check_numbers">Minimo un numero</string>
    <string name="check_uppercase">Minimo una mayuscula</string>
    <string name="check_characters">Minimo un carcater especial</string>
    <string name="init_registration">Iniciar registro</string>
    <string name="name">Nombre</string>
    <string name="last_name">Apellido</string>
    <string name="birthdate">Fecha de nacimiento</string>
    <string name="gender">Género</string>
    <string name="other">Otro</string>
    <string name="woman">Mujer</string>
    <string name="men">Hombre</string>
    <string name="phone">Telefono</string>
    <string name="weight">Peso</string>
    <string name="height">Estatura</string>
    <string name="avatar">Avatar</string>
    <string name="finish">Terminar registro</string>
    <string name="signup_error"> Error, intente de nuevo</string>

    <!-- Error de formato -->
    <string name="error">Error</string>
    <string name="mensaje">Se ha produciodo un error autentificando al usuario</string>
    <string name="error_login">Error, correo y/o contraseña incorrectos</string>
    <string name="aceptar">Aceptar</string>

    <!-- perfil -->
    <string name="welcome">Bienvenido</string>

    <!-- Billboard -->
    <string name="sport">Deporte</string>

    <!-- Detalles fragment -->
    <string name="aim">Objetivo</string>
    <string name="instructions">Instrucciones</string>
    <string name="description">Descripcion</string>
    <string name="exercise">N. Ejecisisos</string>
    <string name="series">N. Series</string>

    <!-- Logout  -->
    <string name="logout_title">Cerrar sesión</string>
    <string name="message_logout">¿Seguro de continuar?</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>

    <!-- notifications -->
    <string name="accept_notifications">Resiviras notificaciones</string>
    <string name="no_notifications">No resiviras notificaciones</string>
</resources>