<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/primary"
    tools:context=".signUp.view.EmailAndPassFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:elevation="10dp"
        app:cardBackgroundColor="@color/primary_aux"
        app:cardCornerRadius="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16sp"
                android:text="@string/registration"
                android:textAppearance="@style/Title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEmail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/email"
                android:textColorHint="@color/secondary"
                app:boxBackgroundColor="@color/primary_aux"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeColor="@color/secondary"
                app:boxStrokeErrorColor="@color/red"
                app:boxStrokeWidth="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:textAppearance="@style/ToEditText"
                    android:textColor="@color/secondary" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPass"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/pass"
                android:textColorHint="@color/secondary"
                app:boxBackgroundColor="@color/primary_aux"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeColor="@color/secondary"
                app:boxStrokeErrorColor="@color/red"
                app:boxStrokeWidth="2dp"
                app:endIconMode="password_toggle"
                app:helperTextTextColor="@color/secondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilEmail">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLength="10"
                    android:singleLine="true"
                    android:textAppearance="@style/ToEditText"
                    android:textColor="@color/secondary" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/ivCheckLong"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:src="@drawable/ic_waiting_check"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilPass" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/check_long"
                android:textAppearance="@style/ToText"
                app:layout_constraintBottom_toBottomOf="@id/ivCheckLong"
                app:layout_constraintStart_toEndOf="@id/ivCheckLong"
                app:layout_constraintTop_toTopOf="@id/ivCheckLong" />

            <ImageView
                android:id="@+id/ivCheckUppercase"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_waiting_check"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivCheckLong" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/check_uppercase"
                android:textAppearance="@style/ToText"
                app:layout_constraintBottom_toBottomOf="@id/ivCheckUppercase"
                app:layout_constraintStart_toEndOf="@id/ivCheckUppercase"
                app:layout_constraintTop_toTopOf="@id/ivCheckUppercase" />

            <ImageView
                android:id="@+id/ivCheckNumber"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_waiting_check"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivCheckUppercase" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/check_numbers"
                android:textAppearance="@style/ToText"
                app:layout_constraintBottom_toBottomOf="@id/ivCheckNumber"
                app:layout_constraintStart_toEndOf="@id/ivCheckNumber"
                app:layout_constraintTop_toTopOf="@id/ivCheckNumber" />

            <ImageView
                android:id="@+id/ivCheckCharacters"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_waiting_check"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivCheckNumber" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/check_characters"
                android:textAppearance="@style/ToText"
                app:layout_constraintBottom_toBottomOf="@id/ivCheckCharacters"
                app:layout_constraintStart_toEndOf="@id/ivCheckCharacters"
                app:layout_constraintTop_toTopOf="@id/ivCheckCharacters" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnStartRegistration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="16dp"
                android:enabled="false"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/init_registration"
                android:textAllCaps="false"
                android:textAppearance="@style/ToButton"
                app:backgroundTint="@color/secondary"
                app:cornerRadius="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivCheckCharacters" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:id="@+id/pbSignUpUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="11dp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>