<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/primary"
    tools:context=".home.profile.view.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/contorno_rdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/alata"
            android:text="@string/profile"
            android:textColor="@color/secondary"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="25dp"
            app:cardBackgroundColor="@color/secondary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" >
            <ImageButton
                android:id="@+id/btnLogout"
                android:layout_width="55dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_logout"
                app:iconGravity="textStart"
                app:backgroundTint="@color/secondary"
                android:contentDescription="@null" />
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivProfile"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_profile"
        app:civ_circle_background_color="@color/secondary"
        app:layout_constraintTop_toBottomOf="@id/toolBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:text="@string/welcome"
        android:textAppearance="@style/textBody"
        android:textColor="@color/secondary"
        app:layout_constraintTop_toBottomOf="@id/ivProfile"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        tools:text="-----"
        android:textAppearance="@style/textBody"
        app:layout_constraintTop_toTopOf="@id/tvWelcome"
        app:layout_constraintStart_toEndOf="@id/tvWelcome"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvEmailTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="15dp"
        android:text="@string/email"
        android:textColor="@color/secondary"
        android:textAppearance="@style/textBody"
        app:layout_constraintTop_toBottomOf="@id/tvWelcome"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/tvUserEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        tools:text="--------"
        android:textAppearance="@style/textBody"
        app:layout_constraintTop_toBottomOf="@id/tvEmailTitle"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="15dp"
        android:text="@string/height"
        android:textColor="@color/secondary"
        android:textAppearance="@style/textBody"
        app:layout_constraintTop_toBottomOf="@id/tvUserEmail"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/tvHeightUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        tools:text="--------"
        android:textAppearance="@style/textBody"
        app:layout_constraintTop_toTopOf="@id/tvHeight"
        app:layout_constraintStart_toEndOf="@id/tvHeight"/>

    <TextView
        android:id="@+id/tvWidth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="15dp"
        android:text="@string/weight"
        android:textColor="@color/secondary"
        android:textAppearance="@style/textBody"
        app:layout_constraintTop_toBottomOf="@id/tvHeight"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvWidthUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        tools:text="--------"
        android:textAppearance="@style/textBody"
        app:layout_constraintStart_toEndOf="@+id/tvWidth"
        app:layout_constraintTop_toTopOf="@+id/tvWidth" />

    <ProgressBar
        android:id="@+id/pbInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>